--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1 class="text-xl font-bold">Som <span class="text-green-600">Movies</span></h1>
         <h3>Watch Now</h3>
         </header>
-        <h1 class="font-bold mt-5 mb-2">Most Popular Movies </h1>
+        <h1 class="font-bold mt-5 mb-2">The Latest Movies </h1>
         <div class="mt-3 grid grid-cols-3 gap-y-2 gap-x-0" id="movie_container">
            
             
